--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -14,12 +14,41 @@
 .app__specialMenu-menu_wine,
 .app__specialMenu-menu_cocktail {
   flex-direction: column;
-  width: calc(75% / 2);
+  width: 35%;
 }
 
 .app__specialMenu-menu_image {
-  width: 25%;
+  width: 30%;
 }
 .app__specialMenu-menu_image img {
-  width: 100%;
+  width: 80%;
+}
+.menu__heading {
+  text-align: center;
+}
+
+@media screen and (max-width: 1150px) {
+  .app__specialMenu-menu {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .app__specialMenu-menu_wine,
+  .app__specialMenu-menu_cocktail {
+    flex-direction: column;
+    width: 90%;
+  }
+  .app__specialMenu-menu_image {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .app__specialMenu-menu_image {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 680px) {
+  .app__specialMenu-menu_image {
+    width: 90%;
+  }
 }
