--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -4,29 +4,44 @@
   grid-gap: 2rem;
   margin-top: 4rem;
 }
-.app__laurel-info {
-  padding: 0 3rem;
-}
+
 .app__laurel {
   display: flex;
   align-items: center;
-  width: 90%;
 }
 .app__laurel-image {
-  width: 50%;
+  width: 45%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .app__laurel-image img {
-  width: 70%;
+  width: 80%;
 }
 .app__laurel-info {
-  width: 50%;
+  width: 55%;
 }
 
 @media screen and (max-width: 1150px) {
   .app__laurel {
-    max-width: 1800px;
+    flex-direction: column;
+    gap: 5rem;
+  }
+  .app__laurel-image {
+    width: 100%;
+  }
+  .app__laurel-image img {
+    margin-right: 2rem;
+  }
+  .app__laurel-info {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .app__laurel-info {
+    width: 95%;
+  }
+  .app__laurel-info_container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
